--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <section class="container">
+        <h1>Guess The Number Game</h1>
+        <p>Enter a number between 1 - 100 in the input feeld and check whether you entered the correct number.</p>
+        <p>You'll get a message to check whether the number was correct or is higher or lower.</p>
+        <p>If you entered the correct number you'll win the game else you'll get another try.</p>
+        <label for="number">Number input feeld</label>
+        <input type="number" name="number" id="number">
+        <button type="submit">Check Number</button>
+    </section>
 </body>
 </html>
