--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
         <input type="number" name="number" id="number">
         <button type="submit">Check Number</button>
     </section>
+    <section>
+        <p class="numberChecked"></p>
+    </section>
 </body>
 </html>
