add classes to btn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>If you entered the correct number you'll win the game else you'll get another try.</p>
         <label for="number">Number input feeld</label>
         <input type="number" name="number" id="number">
-        <button type="submit">Check Number</button>
+        <button type="submit" class="btn btn-ckeck">Check Number</button>
     </section>
     <section>
         <p class="numberChecked"></p>
