changed numberChecked tag to output div

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <button type="submit" class="btn btn-ckeck">Check Number</button>
     </section>
     <section>
-        <p class="numberChecked"></p>
+        <div>
+            <table class="output">
+            </table>
+        </div>
     </section>
 </body>
 </html>
