--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
             </table>
         </div>
     </section>
+    <div class="container">
+        <button type="reset" class="reset">Reset</button>
+    </div>
 </body>
 </html>
