--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Guess The Number Game</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
+    <!-- <script src="main.js" defer></script> -->
+    <script src="beta-v1.js" defer></script>
 </head>
 <body>
     <section class="container">
