docs: Chang description text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="container">
         <h1>Guess The Number Game</h1>
         <p>Enter a number between 1 - 100 in the input feeld and check whether you entered the correct number.</p>
-        <p>You'll get a message to check whether the number was to higher or to low.</p>
+        <p>You'll get a message to check whether the number was to high or to low.</p>
         <p>If you entered the correct number a pop-up box shows that you won.</p>
         <label for="number">Number input feeld</label>
         <input type="number" name="number" id="number">
